# lumos

./: .gitignore  Cargo.toml  README.md
crates/lumos/: Cargo.toml
crates/lumos/doc/: codebk.md  dev.md
crates/lumos/src/: config.rs
crates/lumos/src/ollama/: chat.rs  dispatch.rs  generate.rs  mod.rs  tags.rs
crates/lumos/src/structs/: app.rs  config.rs  mod.rs  ollama.rs
crates/lumos/tests/: config_test.rs  dispatch_test.rs  ollama_test.rs
doc/: bkcode.md
src/: app.rs  config.rs  define.rs  lib.rs  main.rs  model.rs  ollama.rs  service.rs
src/ollama/: chat.rs  dispatch.rs  generate.rs  mod.rs
src/service/: glm.rs  mod.rs
src/structs/: config.rs  ollama.rs
tests/: dispatch_test.rs  ollama_test.rs  service_test.rs  test_ollama.rs
