[package]
name = "lumos"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
axum = "0.7.7"
tokio = { version = "1.40.0", features = ["full"] }
anyhow = "1.0.89"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tower-http = { version = "0.6.1", features = ["cors"] }
tokio-stream = "0.1.16"
reqwest = { version = "0.12.8", features = ["json", "stream"] }
toml = "0.8.19"
chrono = "0.4.38"
rand = "0.8.5"
async-trait = "0.1.83"
futures = "0.3.31"
eventsource-stream = "0.2.3"
futures-util = "0.3.31"
