[workspace]
members = ["crates/*"]
default-members = ["crates/lumos"]

[workspace.dependencies]
lumos = { path = "crates/lumos" }
http_client = { path = "crates/http_client" }

anyhow = "1.0.89"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
derive_more = "0.99.17"
futures = "0.3.31"
log = "0.4.22"
rustls = "0.21.12"
rustls-native-certs = "0.8.0"
smol = "2.0.2"
url = "2.5.2"


[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
