[package]
name = "lumos"
version = "0.1.0"
edition = "2021"

[dependencies]
http_client.workspace = true
clap = { version = "4.5.20", features = ["derive"] }
axum = "0.7.7"
tokio = { version = "1.40.0", features = ["full"] }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tower-http = { version = "0.6.1", features = ["cors"] }
tokio-stream = "0.1.16"
reqwest = { version = "0.12.8", features = ["json", "stream"] }
toml = "0.8.19"
chrono = "0.4.38"
rand = "0.8.5"
async-trait = "0.1.83"
futures.workspace = true
eventsource-stream = "0.2.3"
futures-util = "0.3.31"
hex = "0.4.3"
bytes = "1.8.0"
async-stream = "0.3.6"
